--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="dark">
+<html lang="en" class="dark scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=JetBrains+Mono:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=JetBrains+Mono:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -17,16 +17,18 @@
         theme: {
           extend: {
             colors: {
-              background: '#121212',
-              surface: '#1E1E1E',
-              deep: '#050505',
+              background: '#050505',
+              surface: '#0F0F0F',
+              accent: '#ffffff',
               dolas: {
-                red: '#d32f2f',
-                orange: '#f57c00',
+                red: '#FF3333',
+                dim: '#551111',
+                cyan: '#00E5FF',
               },
               maccus: {
-                blue: '#0288d1',
-                green: '#388e3c',
+                blue: '#00AAFF',
+                dim: '#002244',
+                purple: '#7000FF',
               },
             },
             fontFamily: {
@@ -34,14 +36,21 @@
               mono: ['JetBrains Mono', 'monospace'],
             },
             animation: {
-              'spin-slow': 'spin 3s linear infinite',
-              marquee: 'marquee 25s linear infinite',
-              blob: 'blob 7s infinite',
+              'spin-slow': 'spin 8s linear infinite',
+              marquee: 'marquee 30s linear infinite',
+              blob: 'blob 10s infinite',
+              'pulse-fast': 'pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite',
+            },
+            backgroundImage: {
+              'grid-pattern': "linear-gradient(to right, #1f1f1f 1px, transparent 1px), linear-gradient(to bottom, #1f1f1f 1px, transparent 1px)",
+            },
+            backgroundSize: {
+              'grid-sm': '40px 40px',
             },
             keyframes: {
               marquee: {
                 '0%': { transform: 'translateX(0%)' },
-                '100%': { transform: 'translateX(-100%)' },
+                '100%': { transform: 'translateX(-50%)' },
               },
               blob: {
                 '0%': { transform: 'translate(0px, 0px) scale(1)' },
@@ -56,52 +65,56 @@
     </script>
     <style>
       body {
-        background-color: #121212;
+        background-color: #050505;
         color: #ffffff;
         overflow-x: hidden;
       }
+      
+      /* Film Grain Overlay */
+      .bg-noise {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        pointer-events: none;
+        z-index: 50;
+        opacity: 0.03;
+        background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+      }
+
       /* Custom Scrollbar */
       ::-webkit-scrollbar {
-        width: 8px;
+        width: 6px;
       }
       ::-webkit-scrollbar-track {
         background: #050505;
       }
       ::-webkit-scrollbar-thumb {
         background: #333;
-        border-radius: 4px;
+        border-radius: 3px;
       }
       ::-webkit-scrollbar-thumb:hover {
         background: #555;
       }
-      .glass {
-        background: rgba(30, 30, 30, 0.7);
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .neo-brutal {
-        box-shadow: 4px 4px 0px 0px rgba(255, 255, 255, 0.1);
-        transition: all 0.2s ease-in-out;
-      }
-      .neo-brutal:hover {
-        transform: translate(-2px, -2px);
-        box-shadow: 6px 6px 0px 0px rgba(255, 255, 255, 0.2);
-      }
-      .neo-brutal:active {
-        transform: translate(2px, 2px);
-        box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+
+      /* Modern Utilities */
+      .glass-modern {
+        background: rgba(15, 15, 15, 0.6);
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
+        border: 1px solid rgba(255, 255, 255, 0.05);
       }
       
-      /* 3D Animation Utilities */
+      .text-glow {
+        text-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+      }
+
       .preserve-3d {
         transform-style: preserve-3d;
       }
       .perspective-1000 {
         perspective: 1000px;
-      }
-      .backface-hidden {
-        backface-visibility: hidden;
       }
     </style>
   <script type="importmap">
@@ -117,6 +130,7 @@
 </script>
 </head>
   <body>
+    <div class="bg-noise"></div>
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
